<resources>
    <string name="app_name" translatable="false">FoodTest</string>
    <string name="title_main_menu">Menu</string>
    <string name="title_profile">Profile</string>
    <string name="title_basket">Basket</string>
    <string name="example_food_item_header_text" translatable="false">Ветчина и грибы</string>
    <string name="example_food_item_description_text" translatable="false">Ветчина, шампиньоны, увеличенная порция моцареллы, томатный соус, пепперони, острая черизо</string>
    <string name="example_food_card_order_btn_text" translatable="false">от 345 р.</string>
    <string name="qr_scan" translatable="false">QR-scan</string>
    <string name="example_current_city">Moscow</string>
    <string name="example_text" translatable="false">Что надо сделать: ● Главный экран приложения доставки еды, дизайн по ссылке выше ● В баннеры можно захардкодить любые фото ● Основная задача - сделать идентичную планку с категориями и блок меню(Подсказка. Для реализации можно использовать CollapsingToolbarLayout) ● Планка с категориями при скролле должна прилипать к верхнему бару(для примера можно посмотреть приложение Додо Пицца). ● В качестве API использовать любой открытый источник подходящий под текущие нужды Опционально: ● Offline-режим: т.е. в случае, если нет доступа к сети, показывать последние загруженные данные(и ленту, и детали). Cicerone (means - a guide, one who conducts sightseers) is a lightweight library that makes the navigation in an Android app easy.
It was designed to be used with the MVP/MVVM/MVI patterns but will work great with any architecture.

Main advantages
is not tied to Fragments
not a framework (very lightweight)
short navigation calls (no builders)
static typed checks for screen parameters!
lifecycle-safe!
functionality is simple to extend
suitable for Unit Testing
Additional features
opening several screens inside single call (for example: deeplink)
provides FragmentFactory if it needed
add or replace strategy for opening next screen (see router.navigateTo last parameter)
implementation of parallel navigation (Instagram like)
predefined navigator ready for Single-Activity apps
predefined navigator ready for setup transition animation
How to add
Add the dependency in your build.gradle:

</string>
</resources>